# aion

./: .gitignore  Cargo.toml  README.md  TODO.md
auth-server/src/: error.rs  main.rs
bxml/: Cargo.toml
bxml/src/: main.rs
data/: Cargo.toml
data/src/: main.rs
docs/: AUTH.md  NOTES.md  net_client_opcodes.csv  net_server_opcodes.csv
game-server/: Cargo.toml
game-server/src/: main.rs
game-server/src/game/: character.rs  entity.rs  mod.rs  session.rs  state.rs
game-server/src/game/data/: gear.rs  mod.rs  npc.rs  skill.rs
game-server/src/game/engine/: damage.rs  mod.rs
game-server/src/game/message/: client.rs  mod.rs  server.rs
krypt/: Cargo.toml
krypt/src/: game.rs  lib.rs  sts.rs
launcher/: Cargo.toml
launcher/src/: auth.rs  main.rs
launcher/src/gameforge/: mod.rs  wyn.rs
pak/: Cargo.toml  foo.py
pak/src/: main.rs
pcap-parser/: Cargo.toml
pcap-parser/src/: aion.rs  main.rs
sts-server/: Cargo.toml
sts-server/src/: error.rs  main.rs
sts-server/src/net/: mod.rs
sts-server/src/net/protocol/: api.rs  body.rs  mod.rs
