[package]
name = "krypt"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = { version = "0.7.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
rsa = { version = "0.9.6", default-features = false, features = ["hazmat"] }
sha2 = { version = "0.10.8", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "std"] }
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", default-features = false, features = ["block-padding"] }
rc4 = "0.1.0"

