[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.23.23", default-features = false, features = ["aws-lc-rs"] }
rustls-platform-verifier = { version = "0.5.0", default-features = false }
serde = { version = "1.0.193", features = ["derive"], default-features = false }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
