[package]
name = "sts-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
krypt = { version = "0.1.0", path = "../krypt" }
base64 = { version = "0.22.1", default-features = false }
